Added realm reset awareness